admin dashboard added with its css

--- a/frontend/css/vendor_orders.css
+++ b/frontend/css/vendor_orders.css
@@ -39,6 +39,11 @@
       color: #2563eb;
     }
 
+    .sidebar nav a.active,
+    .sidebar nav a:hover {
+    background: #e7f0ff;
+}
+
     /* MAIN */
     .main {
       flex: 1;
