--- a/frontend/css/admin_dashboard.css
+++ b/frontend/css/admin_dashboard.css
@@ -17,29 +17,30 @@ body {
 
 /* SIDEBAR */
 .sidebar {
-  width: 220px;
-  background: #f7f3ef;
+  width: 240px;
+  background: #F9F8F6;
   padding: 20px;
+  margin-bottom: 10px;
 }
 
 .logo {
-  font-size: 22px;
-  font-weight: bold;
-  margin-bottom: 30px;
-}
+  height:57px;
+  width:67px;
+  margin: 5px 0 10px 10px;}
 
 .sidebar nav a {
   display: block;
-  padding: 10px;
-  margin-bottom: 8px;
+  padding: 12px;
+  margin-top: 14px;
+  margin-bottom: 6px;
+  border-radius: 8px;
   color: #333;
-  text-decoration: none;
-  border-radius: 6px;
+  cursor: pointer;
 }
 
 .sidebar nav a.active,
 .sidebar nav a:hover {
-  background: #e2d8cd;
+  background: #e7f0ff;
 }
 
 .logout {
@@ -50,14 +51,18 @@ body {
 /* MAIN */
 .main {
   flex: 1;
-  padding: 20px 30px;
+
 }
 
 /* HEADER */
 .header {
+  height: 105px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #F9F8F6;
+  padding: 0 20px 0 20px;
   margin-bottom: 20px;
 }
 
@@ -76,7 +81,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 15px;
-  margin-bottom: 20px;
+  margin: 10px;
 }
 
 .card {
@@ -104,6 +109,7 @@ body {
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 15px;
+  margin: 10px;
 }
 
 .chart {
@@ -142,6 +148,7 @@ body {
 /* PIE */
 .wide {
   margin-top: 20px;
+  margin: 10px;
 }
 
 .pie-chart {
@@ -151,9 +158,9 @@ body {
   border-radius: 50%;
   background: conic-gradient(
     #1abc9c 0% 67%,
-    #f39c12 67% 80%,
-    #7f8c8d 80% 92%,
+    #f39c12 67% 92%,
     #e74c3c 92% 100%
+    
   );
 }
 
@@ -170,7 +177,6 @@ body {
 
 .active { color:#1abc9c }
 .pending { color:#f39c12 }
-.inactive { color:#7f8c8d }
 .suspended { color:#e74c3c }
 
 /* TABLE */
@@ -179,6 +185,7 @@ body {
   padding: 15px;
   margin-top: 20px;
   border-radius: 10px;
+  margin: 10px;
 }
 
 table {
